<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paleo Cheater</string>
    <string name="action_settings">Settings</string>
    <string name="have_cheated">I\'ve cheated </string>
    <string name="times_this_week"> times this week!</string>
    <string name="points">Points: </string>
    <string name="sugar">Sugar (-10)</string>
    <string name="bread">Bread (-20)</string>
    <string name="corn">Corn (-20)</string>
    <string name="dairy">Dairy (-5)</string>
    <string name="soy">Soy (-20)</string>
    <string name="PUFA">Hydrogenated Oil (-20)</string>
    <string name="noCheat">I didn\'t cheat today! (+100)</string>
    <string name="startOver">Start Over</string>
    <string name="action_help">Help</string>
    <string name="title_activity_navigate">Paleo Cheater</string>
    <string name="hello_world">Hello world!</string>
    <string name="ICheated">I Cheated :(</string>
    <string name="didAwesome">I did something awesome today!</string>
    <string name="title_activity_awesome">AwesomeActivity</string>
    <string name="heavyThings">I lifted heavy things! (+100)</string>
    <string name="superFood">I ate a super food! (+50)</string>
    <string name="walked">I walked a lot! (+50)</string>

</resources>
